NEXT-391 - Add scoped LESS variables

--- a/Resources/administration/src/app/component/grid/sw-grid-column/sw-grid-column.less
+++ b/Resources/administration/src/app/component/grid/sw-grid-column/sw-grid-column.less
@@ -1,8 +1,9 @@
 @import "~less/variables";
 @import "~less/mixins";
 
-@sw-grid-column-color-action: @color-shopware-blue;
-@sw-grid-column-color-border: @color-steam-cloud;
+@sw-grid-column-color-action:       @color-shopware-blue;
+@sw-grid-column-color-border:       @color-steam-cloud;
+@sw-grid-column-content-color-text: @color-gutenberg;
 
 .sw-grid-column {
     cursor: default;
@@ -53,7 +54,7 @@
         padding: 20px 20px;
         text-align: left;
         font-size: 15px;
-        color: @color-gutenberg;
+        color: @sw-grid-column-content-color-text;
 
         &.is--truncate {
             .truncate();
@@ -61,7 +62,7 @@
         }
 
         a {
-            color: @color-gutenberg;
+            color: @sw-grid-column-content-color-text;
             text-decoration: none;
 
             &:hover {
