--- a/Resources/administration/src/app/component/context-menu/sw-context-button/sw-context-button.less
+++ b/Resources/administration/src/app/component/context-menu/sw-context-button/sw-context-button.less
@@ -1,6 +1,8 @@
 @import '~less/variables';
 
-@sw-context-button-color-text: @color-gutenberg;
+@sw-context-button-color-text:    @color-gutenberg;
+@sw-context-button-border-radius: @border-radius-default;
+@sw-context-button-color-border:  @color-steam-cloud;
 
 .sw-context-button {
     display: inline-block;
@@ -11,7 +13,7 @@
         color: @sw-context-button-color-text;
         background: 0 none;
         border: 1px solid transparent;
-        border-radius: @border-radius-default;
+        border-radius: @sw-context-button-border-radius;
         cursor: pointer;
         height: 24px;
         line-height: 20px;
@@ -20,7 +22,7 @@
 
         &:hover,
         &.is--active {
-            border-color: @color-steam-cloud;
+            border-color: @sw-context-button-color-border;
         }
     }
 }
