Rename application to touchpoints in Administration

--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -53,7 +53,7 @@
                 {% block sw_customer_detail_content_view %}
                     <router-view :customer="customer"
                                  :customerName="customerName"
-                                 :applications="applications"
+                                 :touchpoints="touchpoints"
                                  :customerGroups="customerGroups"
                                  :paymentMethods="paymentMethods"
                                  :countries="countries"
