--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
@@ -9,7 +9,7 @@
                              key="edit">
                         {% block sw_customer_detail_base_form %}
                             <sw-customer-base-form :customer="customer"
-                                                   :applications="applications"
+                                                   :touchpoints="touchpoints"
                                                    :customerGroups="customerGroups"
                                                    :paymentMethods="paymentMethods">
                             </sw-customer-base-form>
