--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
@@ -67,11 +67,11 @@
                 <sw-field type="select"
                           :label="$tc('sw-customer.baseForm.labelApplication')"
                           :placeholder="$tc('sw-customer.baseForm.placeholderApplication')"
-                          name="customerApplication"
-                          v-model="customer.applicationId">
+                          name="customerTouchpoint"
+                          v-model="customer.touchpointId">
                     {% block sw_customer_base_form_shop_field_options %}
-                        <option slot="options" v-for="application in applications" :key="application.id" :value="application.id">
-                            {{ application.name }}
+                        <option slot="options" v-for="touchpoint in touchpoints" :key="touchpoint.id" :value="touchpoint.id">
+                            {{ touchpoint.name }}
                         </option>
                     {% endblock %}
                 </sw-field>
