--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.less
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.less
@@ -56,6 +56,14 @@
         .smart-bar__actions {
             text-align: right;
             white-space: nowrap;
+
+            .sw-button {
+                margin-right: 5px;
+
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
         }
     }
 
