--- a/Resources/administration/src/module/sw-product/page/sw-product-create/sw-product-create.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-create/sw-product-create.html.twig
@@ -1,4 +1,7 @@
 {% block sw_product_detail_content_tabs %}
+{% endblock %}
+
+{% block sw_product_detail_content_tabs %}
     <sw-tabs class="sw-product-detail-page__tabs">
         <sw-tabs-item :route="{ name: 'sw.product.create', params: { id: $route.params.id } }"
                       :title="$tc('sw-product.detail.tabGeneral')">
